# repurposer

./: .env.example  .gitignore  CLAUDE.md  Justfile  README.md  docker-compose.yml  pnpm-lock.yaml  pnpm-workspace.yaml
apps/api/: Dockerfile  pyproject.toml
apps/api/app/: __init__.py  config.py  dependencies.py  main.py  worker.py
apps/api/app/agents/: analyzer.py  article.py  base.py  blog.py  caption_translate.py  carousel.py  clip_agent.py  content_director.py  intent.py  linkedin.py  persona.py  planner.py  post.py  quote_agent.py  quote_card.py  quotes.py  reviser.py  script.py  summary.py
apps/api/app/clients/: minimax.py
apps/api/app/dependencies/: __init__.py  auth.py
apps/api/app/models/: database.py  schemas.py  tables.py
apps/api/app/prompts/: analyzer.j2  article.j2  blog.j2  caption_translate.j2  carousel.j2  clip_agent.j2  content_director.j2  linkedin.j2  persona.j2  planner.j2  post.j2  quote_agent.j2  quote_card.j2  quotes.j2  reviser.j2  script.j2  summary.j2
apps/api/app/routers/: __init__.py  assets.py  auth.py  brand_templates.py  chat.py  clips.py  derivatives.py  distribution.py  files.py  intent.py  library.py  messages.py  music.py  music_tracks.py  notifications.py  outputs.py  projects.py  speakers.py
apps/api/app/services/: asr.py  asset_processing.py  auth.py  brand.py  chat.py  clip_spec.py  demo_seed.py  derivative_dispatch.py  derivative_generation.py  distribution.py  email.py  extraction.py  generation.py  jobs.py  messages.py  metering.py  music.py  music_generation.py  node_runners.py  notifications.py  orchestrator.py  outputs.py  project_context.py  rendering.py  storage.py  voice.py
apps/api/migrations/versions/: 0026843ad9e7_add_music_tracks_table.py  01d5ed9e3af2_add_chat_sessions_refactor_messages.py  0b19cd023b4a_drop_clip_script_remove_shots.py  0bbee17b0c18_add_assets_user_id_and_messages_asset_.py  1569e085b02b_clip_publishing_suite_and_rename_outputs.py  3e8a1f5b9c02_drop_clips_derivatives_and_retired_columns.py  7a3f9c1e2b8d_add_music_table.py  (+16 more)
apps/api/scripts/: cleanup_stuck.py  migrate_to_tos.py  reset_db.py  seed_default_music.py  seed_demo.py
apps/api/tests/: conftest.py  test_clip_agent.py  test_content_director.py  test_derivative_dispatch.py  test_derivative_generation.py  test_generation.py  test_music.py  test_mvp_endpoints.py  test_project_context.py  test_storage.py
(+135 files in other folders)
