[project]
name = "repurposer-api"
version = "0.1.0"
description = "Repurposer FastAPI backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "jinja2>=3.1",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "python-multipart>=0.0.9",
    "pypdf>=4.2",
    "tenacity>=8.4",
    "structlog>=24.1",
    "psycopg2-binary>=2.9.12",
    "faster-whisper>=1.2.1",
    # huggingface_hub 1.x tightened HEAD metadata validation (X-Repo-Commit),
    # which breaks model downloads through hf-mirror.com. Pin to 0.x until the
    # mirror is compatible again.
    "huggingface-hub>=0.24,<1.0",
    "pymupdf>=1.27.2.3",
    "pyjwt>=2.8",
    "boto3>=1.34",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "aiosqlite>=0.20",
]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["migrations/versions/*.py", "app/prompts/*.j2"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"migrations/env.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
